base1: Fix up alignment of the form labels
A lot simpler CSS and better chances of it lining up.

--- a/pkg/base1/cockpit.css
+++ b/pkg/base1/cockpit.css
@@ -121,12 +121,11 @@ a {
 .cockpit-form-table td {
     padding-left: 0.75em;
     padding-top: 0.25em;
-    vertical-align: middle;
+    line-height: 26px;
 }
 
 .cockpit-form-table td.top {
     vertical-align: top;
-    padding-top: 6px;
 }
 
 .cockpit-form-table td:first-child {
@@ -163,10 +162,6 @@ a {
 
 .cockpit-form-table label {
     margin-bottom: 0px;
-}
-
-.cockpit-form-table td.top label {
-    margin-top: 4px;
 }
 
 .cockpit-form-table label span {
